feat: new endpoint to simplify slot management (#257)
* feat: ned endpoint to simplify slot management

* fix: improved assertions
