# src/main/openapi/onecx-workspace-internal.yaml
@@ -237,6 +237,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
+    put:
+      security:
+        - oauth2: [ ocx-ws:all, ocx-ws:write ]
+      tags:
+        - slotInternal
+      description: Add or update multiple slots for a workspace
+      operationId: addOrUpdateSlot
+      parameters:
+        - $ref: '#/components/parameters/id'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateSlotRequest'
+      responses:
+        "200":
+          description: Slot added/updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Slot'
+        "204":
+          description: Slot cleared and deleted successfully
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
   /internal/slots/{id}:
     get:
       security:
@@ -1467,7 +1497,6 @@ components:
     UpdateSlotRequest:
       type: object
       required:
-        - modificationCount
         - name
       properties:
         modificationCount:
